--- a/fly.toml
+++ b/fly.toml
@@ -1,10 +1,10 @@
-# fly.toml app configuration file generated for deploy-marathon-api on 2023-06-07T13:56:37-05:00
+# fly.toml app configuration file generated for marathon2 on 2023-06-16T15:33:39-05:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = "deploy-marathon-api"
-primary_region = "atl"
+app = "marathon2"
+primary_region = "ord"
 console_command = "/rails/bin/rails console"
 
 [http_service]
